syntax = "proto3";

package cloud.healthcare.cdw.etl.mapping.proto;

import "proto/harmonization.proto";
import "proto/library.proto";

option go_package = "github.com/Lakshmi-Priya-Ramisetty/healthcare-data-harmonization/mapping_engine/proto";

// Specification of how data should be harmonized including
// 1) Structure Mapping
// 2) Code harmonization and normalization
// 3) Unit harmonization and normalization
message DataHarmonizationConfig {
  // The shared library configurations for structure mapping.
  repeated LibraryConfig library_config = 1;

  reserved 2;

  // The configuration defining the code harmonization.
  CodeHarmonizationConfig harmonization_config = 3;

  // The configuration defining the unit harmonization.
  UnitHarmonizationConfig unit_harmonization_config = 4;

  // The configuration defining the structure mapping.
  StructureMappingConfig structure_mapping_config = 7;
}
